# alphasig

./: .gitignore  README.md  claude.md  mag7_signals.csv  pyproject.toml
.github/workflows/: ci.yml
assets/: showcase.html
docs/: backtesting.md  engines.md  signal_schema.md
examples/: demo.py  mag7_analysis.py  risk_monitor.py  supply_chain_map.py
src/sigint/: __init__.py  __main__.py  _logging.py  cli.py  edgar.py  exceptions.py  graph.py  llm.py  models.py  parser.py  pipeline.py  reporting.py  sectors.py  signals.py  storage.py
src/sigint/engines/: __init__.py  base.py  m_and_a.py  risk_differ.py  supply_chain.py  tone.py
src/sigint/output/: __init__.py  api.py  parquet.py  webhook.py
tests/: conftest.py  test_cli.py  test_edgar.py  test_engines.py  test_graph.py  test_logging.py  test_models.py  test_output.py  test_parser.py  test_pipeline.py  test_reporting.py  test_sectors.py  test_signals.py  test_storage.py
