[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigint"
version = "0.1.0"
description = "Causal signal extraction from SEC filings using LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sushaan Kandukoori" },
]
keywords = [
    "sec",
    "edgar",
    "filings",
    "nlp",
    "causal-inference",
    "supply-chain",
    "quantitative-finance",
    "signals",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.1,<6",
    "networkx>=3.2,<4",
    "duckdb>=1.0,<2",
    "pyarrow>=15.0,<18",
    "anthropic>=0.40,<1",
    "tenacity>=8.2,<10",
    "structlog>=24.1,<26",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
]
viz = [
    "matplotlib>=3.5",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "pre-commit>=3.6,<4",
]

[project.scripts]
sigint = "sigint.cli:main"

[project.urls]
Homepage = "https://github.com/sushaan-k/sigint"
Repository = "https://github.com/sushaan-k/sigint"
Issues = "https://github.com/sushaan-k/sigint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sigint"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sigint"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "networkx",
    "networkx.*",
    "matplotlib",
    "matplotlib.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pyarrow",
    "pyarrow.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "sigint.output.api"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
